--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>About Us</h1>
+    <p>This is the about page of our website.</p>
     
 </body>
 </html>
